Fix warning borders on iOS and small devices
The warning boxes were too big on small devices which caused the warning
icon to leak out of the page. All warning messages were moved to
`warnBox` and wrapped in a highligh-card.

Additionally, the "details" caret was moved right a bit to prevent it
overlapping with the left border.

--- a/src/frontend/src/styles/main.css
+++ b/src/frontend/src/styles/main.css
@@ -704,7 +704,8 @@ a:hover,
   content: "▶";
   font-size: 0.75em;
   line-height: 2;
-  left: calc(-1 * var(--vs-inline));
+  /* Divide --vs-inline by 2 to ensure we don't actually hit the left border */
+  left: calc(-1 * var(--vs-inline) / 2);
   text-decoration: none;
   transform: translateX(-100%);
   transition: 200ms cubic-bezier(0.3, 0.7, 0, 1);
